# AutoBilling

./: .gitignore  INTELLIGENT_FEATURES.md  README.md  SETUP_MACOS.md  autobilling.py  billing_page_2.html  billing_page_3.html  config.py  credentials_example.py  credentials_template.json  debug_scraper.py  example_usage.py  main.py  manual_extract.py  pyproject.toml  setup_ollama.sh  successful_billing_page.html  test_ollama.py  transaction_history_page.html  utilities_dashboard_page.html
AutoBilling/: __init__.py  pyvenv.cfg
agents/: __init__.py  billing_evaluator.py  exploration_strategist.py  navigation_agent.py
archive/: README_archive.md  autobilling.py  autobilling_copy.py
backend/app/: db.py  main.py
backend/app/routes/: bills.py  dashboard.py  email.py  prompts.yaml  providers.py  see_bills_refactored.py  see_bills_refactored.selector_cache.json  tenants.py  users.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/bills/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/houses/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/property/[id]/: page.tsx
frontend/src/app/providers/: page.tsx
frontend/src/app/providers/add/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/tenants/: page.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: ConfirmModal.tsx  ProgressModal.tsx  Toast.tsx
frontend/src/hooks/: useToast.tsx
utils/: __init__.py  config.py  extraction_strategies.py  login_handler.py  prompts.py  utils.py
