[project]
name = "autobilling"
version = "0.1.0"
description = "AI-powered utility bill scraping and analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "ollama>=0.3.0",
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
    "webdriver-manager>=4.0.0",
    "html5lib>=1.1"
]
