[project]
name = "autobilling"
version = "2.0.0"
description = "AI-powered utility bill scraper - Optimized modular architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "ollama>=0.3.0",
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "webdriver-manager>=4.0.0",
    "pillow>=11.3.0",
]

[project.scripts]
autobilling = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py311']
